snapshots/care/data4life/hc-result-sdk-kmp/error/0.3.0-SNAPSHOT/error-0.3.0-20210927.134351-1-sources.jar.sha256
626aa3afb8148faa252af649a40d50497db1b0de5412e77ece7d4951697b291e